# hermes-secmon

./: .gitignore  README.md  SECURITY-AUDIT-SPEC.MD  config.yaml  config.yaml.example  pyproject.toml  requirements.txt
packaging/: secmon-bpf.rules
scripts/: audit.py  audit.sh  daily.py  daily.sh  install.sh  sync-cron.sh  sync-skills.sh  tick.py  tick.sh  uninstall.sh
skills/hermes-secmon/: SKILL.md
skills/hermes-secmon/references/: anomaly-detection.md  audit-remediation-workflow.md  audit-tuning.md  botnet-detection.md  cron-job-patterns.md  cron-notification-formatting.md  cron-script-deployment.md  cron-script-silent-pattern.md  cron-tick-workflow.md  gap-analysis-workflow.md  hermes-cron-integration.md  (+9 more)
skills/secmon-audit-output-tuning/: SKILL.md
skills/secmon-maintenance/: SKILL.md
src/secmon/: __init__.py  __main__.py  alerts.py  anomaly.py  baseline.py  botnet.py  config.py  metrics.py  output.py  shell.py  state.py  utils.py
src/secmon_plugin/: __init__.py  plugin.yaml  schemas.py  tools.py
tests/: conftest.py  test_alerts.py  test_anomaly.py  test_audit_exhaustive.py  test_audit_fs.py  test_audit_layers.py  test_baseline.py  test_botnet.py  test_bpf_coverage.py  test_bpf_watcher.py  test_checks.py  test_config.py  test_coverage_extra.py  test_coverage_push.py  test_edge_cases.py  test_final_95.py  test_final_coverage.py  test_full_coverage.py  test_last_mile.py  test_logs_coverage.py  test_metrics.py  test_metrics_exceptions.py  test_micro.py  test_modes.py  test_output.py  test_properties.py  test_push_95.py  test_state.py  test_utils.py
(+64 files in other folders)
