[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "secmon"
version = "1.0.0"
description = "Production-grade security audit and monitoring for Debian 12 VPS"
requires-python = ">=3.11"
dependencies = ["PyYAML>=6.0"]

[project.scripts]
secmon = "secmon.__main__:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=secmon --cov-report=term-missing --cov-fail-under=95"

[tool.coverage.run]
source = ["secmon"]
omit = ["*/tests/*", "*/__main__.py"]
